--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body{
 }
 .second-div{
     display: flex;
+    margin-top: 3rem;
+    gap: 1rem;
 }
 .heathyffuture{
     width: 60%;
@@ -38,10 +40,15 @@ gap: 20px;
 
 .doctor-image{
     width: 36%;
-    background-color: #007E85;
-    background-image: url(./images/image\ 17.svg);
+
+    background-image: url(./images/Vector\ \(2\).png);
+    background-position: center;
+    background-repeat: no-repeat;
     position: relative;
 
+}
+.doctor-image-ten>img{
+    height: 520px;
 }
 .littel-image{
     width: 120px;
@@ -261,3 +268,62 @@ input[type="text"]::placeholder {
     gap: 1.8rem;
     margin-top: 2rem;
 }
+.newsletter{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+}
+.news-letter-input{
+    border-radius: 5px;
+    height: 3rem;
+    width: 20rem;
+    border-radius: 50px;
+    border: none;
+    background-color: #fff;
+    padding-left: 2rem;
+
+}
+.news-letter-form{
+    display: flex;
+    gap: 2rem;
+}
+.btn-newsletter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+    background: #007E85;
+    font-size: 1rem;
+    width: 160px;
+    padding: 12px 20px;
+}
+.footer-contant{
+    width: 100%;
+    height: 454px;
+    background: #007E85;
+    align-items: center;
+    display: flex;
+    margin-top: 3rem;
+}
+.footer-product{
+    color: #fff;
+}
+.footer-product>h3{
+    margin-bottom: 3rem;
+}
+.footer-product>h6{
+text-align: left;
+margin-left: 1.5rem;
+    margin-bottom: 2rem;
+}
+.footer-product>ul{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.footer-product>ul>li{
+    list-style: none;
+    text-align: left;
+}
+
