--- a/style.css
+++ b/style.css
@@ -198,6 +198,9 @@ input[type="text"]::placeholder {
     margin-top: 5rem;
     margin-bottom: 5rem;
 }
+.service-we-provide>h1{
+    color: #007E85;
+}
 .service-we-provide>p{
     width: 50%;
     text-align: center;
@@ -327,3 +330,85 @@ margin-left: 1.5rem;
     text-align: left;
 }
 
+
+
+
+
+
+.meet-the-best-hospital{
+    background-image: url(./images/Rectangle\ 1548.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 722px;
+ 
+}
+.meet-the-best-hospital{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.meet-the-best-hospital-1st-containt-div{
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    align-items: center;
+    color: #f5f3f3;
+}
+.meet-the-best-hospital-1st-containt-div>h1{
+    font-weight: 900;
+    width: 20rem;
+    font-size: 3rem;
+    color: var(--light-text-color, #FFF);
+}
+.meet-the-best-hospital-btn{
+    display: flex;
+    gap: 1rem;
+}
+.meet-the-best-hospital-btn-1{
+    display: flex;
+padding: 15px 36px;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+border-radius: 37px;
+background: #007E85;
+color: #fff;
+border: 1px solid #007E85;
+}
+.meet-the-best-hospital-btn-2{
+display: flex;
+padding: 15px 36px;
+flex-direction: column;
+align-items: center;
+color: #fff;
+gap: 10px;
+background-color: transparent;
+border-radius: 37px;
+border: 1px solid #007E85;
+}
+.booking-oppointment-div{
+    display: flex;
+    width: 328px;
+    padding: 40px;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    border-radius: 10px;
+background: var(--light-background-color, #FFF);
+}
+.booking-oppointment-div>form{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.booking-oppointment-btn{
+    display: flex;
+padding: 15px 40px;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+align-self: stretch;
+border-radius: 5px;
+background: #007E85;
+}
