--- a/style.css
+++ b/style.css
@@ -276,6 +276,7 @@ input[type="text"]::placeholder {
     flex-direction: column;
     align-items: center;
     gap: 2rem;
+    margin-top: 5rem;
 }
 .news-letter-input{
     border-radius: 5px;
@@ -411,4 +412,32 @@ gap: 10px;
 align-self: stretch;
 border-radius: 5px;
 background: #007E85;
+}
+.faqs{
+    margin-top: 3rem;
+    display: flex;
+    flex-direction: column;
+    
+
+}
+.faqs>p{
+    width: 60%;
+    text-align: center;
+    align-self: center;
+}
+.faq-arrow{
+    display: flex;
+    justify-content: space-between;
+    gap: 1em;
+}
+.charven{
+    width: 18%;
+    
+}
+.charven>img{
+    margin-top: 20px;
+}
+.faq-arrow-titel{
+    width: 80%;
+    margin-left: 30px;
 }
