--- a/style.css
+++ b/style.css
@@ -441,3 +441,31 @@ background: #007E85;
     width: 80%;
     margin-left: 30px;
 }
+.hero-page-3{
+    height: 722px;
+    background-image: url(./images/Rectangle\ 1548.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.get-in-touch{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 3rem;
+}
+.main-form{
+    display: flex;
+    gap: 2rem;
+    margin-top: 2rem;
+}
+.form-div-1>input{
+    width: 20rem;
+    border-radius: 8px;
+    border: 1px solid #007E85;
+}
+.form-div-2>input{
+    width: 43rem;
+    border-radius: 8px;
+    border: 1px solid #007E85;
+}
+
